--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body>
-    <div>new feature upload</div>
-    <div>hello world</div>
-  </body>
+  <body></body>
 </html>
